; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_send_disconnect_notification.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_send_disconnect_notification.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TCP_PACKET_DISCONNECT_NOTIFICATION = common dso_local global i64 0, align 8
@NUM_RESERVED_PORTS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @send_disconnect_notification to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_disconnect_notification(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [2 x i64], align 16
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = getelementptr inbounds [2 x i64], [2 x i64]* %5, i64 0, i64 0
  %7 = load i64, i64* @TCP_PACKET_DISCONNECT_NOTIFICATION, align 8
  store i64 %7, i64* %6, align 8
  %8 = getelementptr inbounds i64, i64* %6, i64 1
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @NUM_RESERVED_PORTS, align 8
  %11 = add nsw i64 %9, %10
  store i64 %11, i64* %8, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = getelementptr inbounds [2 x i64], [2 x i64]* %5, i64 0, i64 0
  %14 = call i32 @write_packet_TCP_secure_connection(i32* %12, i64* %13, i32 16, i32 1)
  ret i32 %14
}

declare dso_local i32 @write_packet_TCP_secure_connection(i32*, i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
